Improvements to the build system and container entrypoint